update project.html, make logo resize on index.html

--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -1,5 +1,15 @@
 <aside>
-	<div class="sideDiv">
+<div class="pix sideDiv">
+		<h2>Support Development</h2>
+		<p>Building the virtual lunar town is a lot of work. Fund us so we can get it done quickly and well.
+		</p>
+		<script src="https://gumroad.com/js/gumroad-embed.js"></script>
+	<div class="gumroad-product-embed" data-gumroad-product-id="LetbT">
+	<a href="https://gumroad.com/l/LetbT">Loading...</a></div>
+	<div class="gumroad-product-embed" data-gumroad-product-id="xBciwO">
+		<a href="https://gumroad.com/l/xBciwO">Loading...</a></div>
+</div>
+<div class="sideDiv">
 		<div id="RSS-feed">
 		{% include sigfeed.html %}
 		</div>
@@ -15,10 +25,7 @@
 				</g>
 			</svg>
 		</a>
-	</div>
-	</div>
-	<div class="sideDiv">
-		{% include newsletter.html %}
+		</div>
 	</div>
 </aside>
 
