--- a/_includes/downloads.html
+++ b/_includes/downloads.html
@@ -4,12 +4,12 @@
 <div class="pix" style="width: 300px;">
 <a href="https://github.com/briligg/moonwards"><img class="overlay" src="img/website-promo.jpg">
 <h6>Moonwards</h6></a>
-<p>Design, functionality and apps on the website. Content for embedding as added media in the virtual colonies. Work on anything that is the public face of Moonwards outside the virtual world.</p>
+<p>Code for all the apps on the Learn page, plus datasets on the planets and on rocket engines. </p>
 </div>
 <div class="pix" style="width: 300px;">
-  <a href="https://github.com/briligg/Moonwards-Blender"><img class="overlay" src="img/AtriumHabOutside550.jpg">
-<h6> Moonwards-Blender</h6></a>
-<p>All the 3d models of the project, which are made in Blender.</p>
+  <a href="https://github.com/briligg/Moonwards-Virtual-Moon"><img class="overlay" src="img/TeacupSurface_1067.jpg">
+<h6> Moonwards Virtual Moon</h6></a>
+<p>Everything used to build the virtual lunar town.</p>
 <p>
   For those who would like purely the colony of Cernan's Promise in a stand-alone format, download one of these zip files:</p>
   <ul style="margin-left: 15px;">
