--- a/_includes/mainVideos.html
+++ b/_includes/mainVideos.html
@@ -1,16 +1,21 @@
 <section class="blackDiv">
   <h3>Selected Videos of the Virtual Colonies</h3>
-  <br>
-  <div class="framewrap frame16x9">
-    <iframe src="LalandeTownOverview.html" style="overflow-y: hidden;" scrolling="no"></iframe>
-  </div>
-<div class="framewrap frame16x9">
-  <iframe src="CP-Phase1-Narrated-Walkthrough.html" style="overflow-y: hidden;" scrolling="no"></iframe>
-</div>
-<div class="framewrap frame16x9">
-  <iframe src="CP-Nov2017.html" style="overflow-y: hidden;" scrolling="no"></iframe>
-</div>
-<div class="framewrap frame16x9">
-  <iframe src="youtubeVideo.html" style="overflow-y: hidden;" scrolling="no"></iframe>
-</div>
+    <div class="pixBody">  
+      <div class="pix">
+        <div class="framewrap frame16x9">
+          <iframe src="LalandeTownOverview.html" style="overflow-y: hidden;" scrolling="no"></iframe>
+        </div>
+      </div>
+      <div class="pix">  
+        <div class="framewrap frame16x9">
+          <iframe src="CP-Phase1-Narrated-Walkthrough.html" style="overflow-y: hidden;" scrolling="no"></iframe>
+        </div>
+      </div>
+      <div class="pix"><div class="framewrap frame16x9">
+        <iframe src="CP-Nov2017.html" style="overflow-y: hidden;" scrolling="no"></iframe>
+      </div>
+    </div>
+
+</div> 
+
 </section>
