--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -9,6 +9,7 @@ layout: default
 		<div class="intro">
 				<h1>{{page.headline}}</h1>
 				{% if page.intro %} {{ page.intro | markdownify }} {% endif %}
+		</div>
 	</header>
 {{content}}
 </div>
