--- a/_includes/headerMain.html
+++ b/_includes/headerMain.html
@@ -1,4 +1,4 @@
 	<header>
-	<img src="img/MoonwardsLogo2018.svg" alt="Moonwards" id="Logo">
+	<img src="img/MoonwardsLogo2018.svg" alt="Moonwards" id="Logo" style="width: 250px; flex: 0 1 40%;">
 		<p id="note">What if a group of nations was determined to colonize the Moon, and they based their decisions only on technical and economic merit?</p>
 	</header>
