--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,10 @@
 	<nav>
 		<ul>
-			<li><a href="index.html" title="Where recent items appear, and a project outline">Vision</a>
+			<li><a href="index.html">Start</a>
 				<ul>
 
-					<li><a href="project.html" title="Core philosophy, about us, and the stuff below">Project</a>
+					<li><a href="project.html">Project</a>
 						<ul>
-							<li><a href="apps.html">Initial Colony App</a></li>
 							<li><a href="project.html#assets" title="Get the 3d models and other assets used in Moonwards">Assets</a></li>
 							<li><a href="project.html#resources" title="Lots of ways to learn about space exploration and lunar colonization">Resources</a></li>
 						</ul>
