--- a/sass/_mainHeader.sass
+++ b/sass/_mainHeader.sass
@@ -8,7 +8,7 @@ header
 
 
 #Logo
-  flex: 0 0 40%
+  flex: 0 0 250px
   @media only screen and (min-width: 1350px)
     flex: 0 0 25%
 
@@ -26,5 +26,4 @@ header
   padding: 12px
   text-align: right
   p
-    width: 50
     margin-left: auto
