--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -3,8 +3,9 @@ layout: default
 ---
 
 	<header>
-		<div id="Logo">
-			<a class="clearbk" href="index.html"><img src="img/MoonwardsLogo2018.svg" alt="Moonwards"></a>
+		<div style="flex: 1 1 30%">
+					<a class="clearbk" href="index.html"><img src="img/MoonwardsLogo2018.svg" 
+				alt="Moonwards" width="100%"></a>
 		</div>
 		<div class="intro">
 				<h1>{{page.headline}}</h1>
