--- a/sass/_contentHeader.sass
+++ b/sass/_contentHeader.sass
@@ -7,15 +7,14 @@ header
   width: 100%
 
 #Logo
-  +flex(0 1 30%)
   padding: 0.5rem
 
 .intro
-  +flex(3 1 30%)
+  flex: 1 1 60%
   font-size: 1rem
   line-height: 1.6rem
   text-align: right
   background: $outerBkgd
   border-radius: $introRadius
   padding: 2rem 3rem 2rem 2rem
-  margin-left: auto
+  margin-left: 0
