add Gumroad t-shirt ad on index.html

--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -1,13 +1,25 @@
 <aside>
-<div class="pix sideDiv">
+<div class="pixBody sideDiv">
 		<h2>Support Development</h2>
 		<p>Building the virtual lunar town is a lot of work. Fund us so we can get it done quickly and well.
 		</p>
 		<script src="https://gumroad.com/js/gumroad-embed.js"></script>
-	<div class="gumroad-product-embed" data-gumroad-product-id="LetbT">
-	<a href="https://gumroad.com/l/LetbT">Loading...</a></div>
-	<div class="gumroad-product-embed" data-gumroad-product-id="xBciwO">
-		<a href="https://gumroad.com/l/xBciwO">Loading...</a></div>
+	<div class="pix">	
+		<div class="gumroad-product-embed" data-gumroad-product-id="LetbT">
+			<a href="https://gumroad.com/l/LetbT">Loading...</a>
+		</div>
+	</div>
+	<div class="pix">	
+		<div class="gumroad-product-embed" data-gumroad-product-id="xBciwO">
+			<a href="https://gumroad.com/l/xBciwO">Loading...</a>
+		</div>
+	</div>
+	<div class="pix">	
+		<div class="gumroad-product-embed" data-gumroad-product-id="PRNxW">
+		<a href="https://gumroad.com/l/PRNxW">Loading...</a>
+		</div>
+	</div>
+
 </div>
 <div class="sideDiv">
 		<div id="RSS-feed">
