--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -1,7 +1,19 @@
 <aside>
 <div class="pixBody sideDiv">
+		<h2>Pre-Sales</h2>
+		<p>Bring Moon Town to life</p>
+		
+		<script src="https://gumroad.com/js/gumroad-embed.js"></script>
+		<div class="pix">
+			<div class="gumroad-product-embed" data-gumroad-product-id="Cphdp"><a href="https://gumroad.com/l/Cphdp">Loading...</a></div>
+		</div>
+
+		<script src="https://gumroad.com/js/gumroad-embed.js"></script>
+		<div class="pix">
+			<div class="gumroad-product-embed" data-gumroad-product-id="MvPya"><a href="https://gumroad.com/l/MvPya">Loading...</a></div>
+		</div>
 		<h2>Support Development</h2>
-		<p>Building the virtual lunar town is a lot of work. Fund us so we can get it done quickly and well.
+		<p>Building Moon Town happens faster and better with a little help.
 		</p>
 		<script src="https://gumroad.com/js/gumroad-embed.js"></script>
 	<div class="pix">	
@@ -21,24 +33,6 @@
 	</div>
 
 </div>
-<div class="sideDiv">
-		<div id="RSS-feed">
-		{% include sigfeed.html %}
-		</div>
-		<div class="sideDiv">
-		<a href="https://www.moonwards.com/feed/rss.xml" class="plzNoHoverBackground">
-			<svg xmlns="http://www.w3.org/2000/svg" id="RSSicon"
-				viewbox="0 0 8 8" width="32" height="32">
-				<title>RSS feed</title>
-				<g stroke="none" fill="yellow">
-					<circle cx="2" cy="6" r="1" />
-					<path d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" />
-					<path d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" />
-				</g>
-			</svg>
-		</a>
-		</div>
-	</div>
 </aside>
 
 <!--add an array so that a series of youtube or vimeo videos can be added over time and easily changed.
