make Gumroad ads fit well in sidebar for most common laptop screen size

--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -1,37 +1,41 @@
 <aside>
-<div class="pixBody sideDiv">
-		<h2>Pre-Sales</h2>
-		<p>Bring Moon Town to life</p>
-		
-		<script src="https://gumroad.com/js/gumroad-embed.js"></script>
-		<div class="pix">
-			<div class="gumroad-product-embed" data-gumroad-product-id="Cphdp"><a href="https://gumroad.com/l/Cphdp">Loading...</a></div>
+<div class="sideDiv">
+		<div>
+			<h2>Pre-Sales</h2>
+			<p>Bring Moon Town to life</p>
 		</div>
+		<div class="pixBody">
+			<script src="https://gumroad.com/js/gumroad-embed.js"></script>
+			<div class="pix">
+			<div class="gumroad-product-embed" data-gumroad-product-id="Cphdp"><a href="https://gumroad.com/l/Cphdp">Loading...</a></div>
+			</div>
 
-		<script src="https://gumroad.com/js/gumroad-embed.js"></script>
-		<div class="pix">
-			<div class="gumroad-product-embed" data-gumroad-product-id="MvPya"><a href="https://gumroad.com/l/MvPya">Loading...</a></div>
+			<script src="https://gumroad.com/js/gumroad-embed.js"></script>
+			<div class="pix">
+				<div class="gumroad-product-embed" data-gumroad-product-id="MvPya"><a href="https://gumroad.com/l/MvPya">Loading...</a></div>
+			</div>
 		</div>
 		<h2>Support Development</h2>
 		<p>Building Moon Town happens faster and better with a little help.
 		</p>
-		<script src="https://gumroad.com/js/gumroad-embed.js"></script>
-	<div class="pix">	
-		<div class="gumroad-product-embed" data-gumroad-product-id="LetbT">
-			<a href="https://gumroad.com/l/LetbT">Loading...</a>
+		<div class="pixBody">
+			<script src="https://gumroad.com/js/gumroad-embed.js"></script>
+			<div class="pix">	
+				<div class="gumroad-product-embed" data-gumroad-product-id="LetbT">
+					<a href="https://gumroad.com/l/LetbT">Loading...</a>
+				</div>
+			</div>
+			<div class="pix">	
+				<div class="gumroad-product-embed" data-gumroad-product-id="xBciwO">
+					<a href="https://gumroad.com/l/xBciwO">Loading...</a>
+				</div>
+			</div>
+			<div class="pix">	
+				<div class="gumroad-product-embed" data-gumroad-product-id="PRNxW">
+				<a href="https://gumroad.com/l/PRNxW">Loading...</a>
+				</div>
+			</div>
 		</div>
-	</div>
-	<div class="pix">	
-		<div class="gumroad-product-embed" data-gumroad-product-id="xBciwO">
-			<a href="https://gumroad.com/l/xBciwO">Loading...</a>
-		</div>
-	</div>
-	<div class="pix">	
-		<div class="gumroad-product-embed" data-gumroad-product-id="PRNxW">
-		<a href="https://gumroad.com/l/PRNxW">Loading...</a>
-		</div>
-	</div>
-
 </div>
 </aside>
 
